# canister_file_manager_backend

./: .env  Cargo.toml  README.md  canister_ids.json  dfx.json  original_canister_ids.json
frontend/file_hosting/: file_hosting.did.d.ts  index.d.ts  index.js
frontend/file_manager/: file_manager.did.d.ts  file_manager.did.js
scripts/: generate.sh
src/file_manager/: Cargo.toml  file_manager.did
src/file_manager/src/: lib.rs  methods.rs  store.rs
src/file_manager/src/helpers/: ic_data_helper.rs
src/file_manager/src/logic/: asset_methods.rs  directory_methods.rs  file_methods.rs  http_methods.rs
src/file_manager/src/models/: asset_models.rs  directory_models.rs  file_models.rs  http_models.rs  misc_models.rs
