[package]
name = "file_manager"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[[test]]
name="generate"
path = "src/lib.rs"

[dependencies]
candid = "0.8.2"
ic-cdk = "0.6.0"
ic-cdk-macros = "0.6.0"
serde = "1.0.148"
serde_json = "1.0.95"
chrono = "0.4"

# for certified assets
sha2 = "0.10.6"
hex = "0.4.3"
ic-certified-assets = "0.2.5"
ic-certified-map = "0.3.4"
serde_cbor = "0.11.2"
base64 = "0.13.1"
